--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "inversify": "^6.0.1",
     "mongoose": "^7.4.4",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.6.13",
     "redis": "^4.6.7",
+    "reflect-metadata": "^0.1.13",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
@@ -36,7 +38,7 @@
     "@typescript-eslint/parser": "^6.6.0",
     "eslint": "^8.49.0",
     "eslint-plugin-react": "^7.33.2",
-    "typescript": "^5.2.2",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
